syntax = "proto3";

package fadliarz.distributed_faas.registrar_service.v1;

option go_package = "github.com/fadliarz/distributed-faas/services/registrar-service/v1;registrar_service_v1";

service RegistrarService {
    rpc RegisterMachine(RegisterMachineRequest) returns (RegisterMachineResponse);
}

message RegisterMachineRequest {
    string address = 1;
}

message RegisterMachineResponse {
    string machine_id = 1;
    string address = 2;
    string status = 3;
    string message = 4;
}

message HeartbeatRequest {
    string machine_id = 1;
}

message HeartbeatResponse {
    string status = 1;
    string message = 2;
}

